src/patternfly/components/Page/page.scss
/* ... */
.#{$page}__main,
.#{$page}__main-drawer,
.#{$page}__main-group {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.#{$page}__main-subnav {
  padding-block-start: var(--#{$page}__main-subnav--PaddingBlockStart);
  padding-block-end: var(--#{$page}__main-subnav--PaddingBlockEnd);
  padding-inline-start: var(--#{$page}__main-subnav--PaddingInlineStart);
  padding-inline-end: var(--#{$page}__main-subnav--PaddingInlineEnd);
  background-color: var(--#{$page}__main-subnav--BackgroundColor);
}

.#{$page}__main-breadcrumb {
  padding-block-start: var(--#{$page}__main-breadcrumb--PaddingBlockStart);
  padding-block-end: var(--#{$page}__main-breadcrumb--PaddingBlockEnd);
  padding-inline-start: var(--#{$page}__main-breadcrumb--PaddingInlineStart);
  padding-inline-end: var(--#{$page}__main-breadcrumb--PaddingInlineEnd);
  background-color: var(--#{$page}__main-breadcrumb--BackgroundColor);

  + .#{$page}__main-section {
    --#{$page}__main-section--PaddingBlockStart: var(--#{$page}__main-breadcrumb--main-section--PaddingBlockStart);
  }

  // Responsive height modifiers for sticky top/bottom
  @each $breakpoint, $breakpoint-value in $pf-page-v6--height-breakpoint-map {
    $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}-height, "");

    @include pf-v6-apply-height-breakpoint($breakpoint) {
      &.pf-m-sticky-top#{$breakpoint-name},
      .#{$page}__main-group.pf-m-sticky-top#{$breakpoint-name} &:last-child {
        --#{$page}__main-breadcrumb--PaddingBlockEnd: var(--#{$page}__main-breadcrumb--m-sticky-top--PaddingBlockEnd);
      }
    }
  }
}

.#{$page}__main-tabs {
  padding-block-start: var(--#{$page}__main-tabs--PaddingBlockStart);
  padding-block-end: var(--#{$page}__main-tabs--PaddingBlockEnd);
  padding-inline-start: var(--#{$page}__main-tabs--PaddingInlineStart);
  padding-inline-end: var(--#{$page}__main-tabs--PaddingInlineEnd);
  background-color: var(--#{$page}__main-tabs--BackgroundColor);

  .#{$page}__main-breadcrumb + & {
    --#{$page}__main-tabs--PaddingBlockStart: var(--#{$page}__main-breadcrumb--page__main-tabs--PaddingBlockStart);
  }
}

.#{$page}__main-section,
.#{$page}__main-group,
.#{$page}__main-wizard {
  &.pf-m-fill {
    flex-grow: 1;
  }

  &.pf-m-no-fill {
    flex-grow: 0;
  }
}

.#{$page}__main-section {
  gap: var(--#{$page}__main-section--RowGap);
  padding-block-start: var(--#{$page}__main-section--PaddingBlockStart);
  padding-block-end: var(--#{$page}__main-section--PaddingBlockEnd);
  padding-inline-start: calc(var(--#{$page}__main-section--PaddingInlineStart) - var(--#{$page}__main-container--BorderWidth));
  padding-inline-end: calc(var(--#{$page}__main-section--PaddingInlineEnd) - var(--#{$page}__main-container--BorderWidth));
  background-color: var(--#{$page}__main-section--BackgroundColor);

  &.pf-m-secondary {
    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-secondary--BackgroundColor);
  }

  @each $breakpoint, $breakpoint-value in $pf-page-v6--breakpoint-map {
    $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");

    @include pf-v6-apply-breakpoint($breakpoint) {
      // stylelint-disable max-nesting-depth
      &.pf-m-padding#{$breakpoint-name} {
        padding-block-start: var(--#{$page}__main-section--PaddingBlockStart);
        padding-block-end: var(--#{$page}__main-section--PaddingBlockEnd);
        padding-inline-start: calc(var(--#{$page}__main-section--PaddingInlineStart) - var(--#{$page}__main-container--BorderWidth));
        padding-inline-end: calc(var(--#{$page}__main-section--PaddingInlineEnd) - var(--#{$page}__main-container--BorderWidth));
      }

      &.pf-m-no-padding#{$breakpoint-name} {
        padding: 0;
      }
      // stylelint-enable
    }
  }
}

.#{$page}__main-wizard {
  flex: 1 1;
  min-height: 0;
  background-color: var(--#{$page}__main-wizard--BackgroundColor);
  border-block-start: var(--#{$page}__main-wizard--BorderBlockStartWidth) solid var(--#{$page}__main-wizard--BorderBlockStartColor);

  &:first-child {
    --#{$page}__main-wizard--BorderBlockStartWidth: 0;
  }
}

.#{$page}__main-wizard .#{$page}__main-body {
  min-height: 0;
}

.#{$page}__main-group {
  flex-shrink: 0;
}

.#{$page}__drawer {
  grid-area: main;

  > .#{$drawer} {
    flex: 1 0 auto;
  }
}

